# MLHelper

./: .gitignore  pyproject.toml
mlhelper/: __main__.py
mlhelper/config/: __init__.py  conf.py
mlhelper/core/: app.py  logging_setup.py
mlhelper/ui/: main_window.py
mlhelper/ui/custom_widgets/: explorer.py  file_system.py
mlhelper/ui/data_models/: file_system.py
mlhelper/ui/dock_widgets/: explorer.py
